# smallpt-haskell

./: .gitignore  LICENSE  Main.hs  Makefile  cabal.sh  smallpt.cabal
Tim/Smallpt/: Chart.hs  Distribution.hs  Render.hs
ec2/: ec2-deploy.sh  ec2-render.sh  ec2-start-ubuntu-16.sh
main/: AgentMain.hs  ControlMain.hs  smallpt.cabal
main/Tim/Smallpt/: Agent.hs  Distribution.hs
protocol/: smallpt-protocol.cabal
protocol/Tim/Smallpt/Protocol/: EvalWork.hs  MakeWork.hs  Render.hs
render/: Main.hs  smallpt-render.cabal  test.html
render/Tim/Smallpt/: Render.hs
